--- a/Assets/Plugins/Zenject/OptionalExtras/Async/Tests/Addressable/Extenject-Addressable-Tests.asmdef
+++ b/Assets/Plugins/Zenject/OptionalExtras/Async/Tests/Addressable/Extenject-Addressable-Tests.asmdef
@@ -6,7 +6,8 @@
         "GUID:9bf848f31e601a249a6bebdc53287470",
         "GUID:9e24947de15b9834991c9d8411ea37cf",
         "GUID:84651a3751eca9349aac36a66bba901b",
-        "GUID:27619889b8ba8c24980f49ee34dbb44a"
+        "GUID:27619889b8ba8c24980f49ee34dbb44a",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
