--- a/Assets/Scripts/Game.asmdef
+++ b/Assets/Scripts/Game.asmdef
@@ -12,7 +12,9 @@
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:7793e5cd8d2e94e21b56de41db6606bb",
         "GUID:626070ea3273cb844a310aa4f53b31fa",
-        "GUID:5f193089d0fe18b44b1ff856634213c0"
+        "GUID:5f193089d0fe18b44b1ff856634213c0",
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:84651a3751eca9349aac36a66bba901b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
