return old clin and , edits bundle

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.addressables": "1.21.21",
+    "com.unity.addressables.android": "1.0.6",
     "com.unity.ai.navigation": "2.0.6",
     "com.unity.assetbundlebrowser": "https://github.com/Unity-Technologies/AssetBundles-Browser.git",
     "com.unity.collab-proxy": "2.2.0",
